# gameput

./: Cargo.toml  DESIGN.MD  README.MD  justfile
.config/: config.default.toml
src/: app.rs  buttons.rs  cli.rs  config.rs  lib.rs  logging.rs  main.rs  octant.rs
tools/: README.MD
